--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,52 @@
 .input-number {
   width: 4rem;
 }
+
+.github-corner {
+  width: 4rem;
+  border-bottom: 0;
+  position: fixed;
+  right: 0;
+  text-decoration: none;
+  top: 0;
+  z-index: 1;
+}
+
+.github-corner:hover .octo-body {
+  animation: octocat-push .56s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  .github-corner:hover .octo-arm {
+    animation: none;
+  }
+
+  .github-corner .octo-arm {
+    animation: octocat-push .56s ease-in-out;
+  }
+}
+
+@keyframes octocat-push {
+
+  0%,
+  to {
+    transform: rotate(10deg);
+  }
+
+  20%,
+  60% {
+    transform: rotate(10deg);
+  }
+
+  40%,
+  80% {
+    transform: rotate(10deg);
+  }
+}
+
+.github-corner svg {
+  color: #fff;
+  fill: black;
+  height: var(--header-height);
+  width: var(--header-height);
+}
